--- a/platforms/javascript/package.json
+++ b/platforms/javascript/package.json
@@ -7,7 +7,8 @@
     "src"
   ],
   "scripts": {
-    "deploy": "yarn publish --access=public"
+    "deploy": "yarn publish --access=public",
+    "test": "tsc"
   },
   "keywords": [
     "levilamina",
@@ -31,7 +32,6 @@
   "homepage": "https://github.com/LiteLDev/LegacyScriptEngine_API#readme",
   "devDependencies": {
     "@cordisjs/eslint-config": "^1.1.1",
-    "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "dumble": "^0.2.1",
